--- a/finish.env
+++ b/finish.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgresql://pgadmin_mrsk_user:MgrSF6CM1ybExuQWhBMHVCFLQH5CXmv5@dpg-d05caa24d50c73etcaj0-a.oregon-postgres.render.com/pgadmin_mrsk
+DATABASE_URL=postgresql://pgadmin_mrsk_user:MgrSF6CM1ybExuQWhBMHVCFLQH5CXmv5@dpg-d05caa24d50c73etcaj0-a.oregon-postgres.render.com:5432/pgadmin_mrsk
+
