--- a/finish.env
+++ b/finish.env
@@ -1,2 +1,3 @@
-DATABASE_URL=postgresql://pgadmin_mrsk_user:MgrSF6CM1ybExuQWhBMHVCFLQH5CXmv5@dpg-d05caa24d50c73etcaj0-a.oregon-postgres.render.com:5432/pgadmin_mrsk
+DATABASE_URL=postgresql://pgadmin_mrsk_user:MgrSF6CM1ybExuQWhBMHVCFLQH5CXmv5@dpg-d05caa24d50c73etcaj0-a.oregon-postgres.render.com:5432/pgadmin_mrsk?
+
 
