--- a/finish.env
+++ b/finish.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://pgadmin_mrsk_user:MgrSF6CM1ybExuQWhBMHVCFLQH5CXmv5@dpg-d05caa24d50c73etcaj0-a.oregon-postgres.render.com:5432/pgadmin_mrsk?
+DATABASE_URL%3Dpostgresql%3A%2F%2Fpgadmin_mrsk_user%3AMgrSF6CM1ybExuQWhBMHVCFLQH5CXmv5%40dpg-d05caa24d50c73etcaj0-a.oregon-postgres.render.com%3A5432%2Fpgadmin_mrsk%3F
 
 
